--- a/portifolio.html
+++ b/portifolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" type="imagex/png" href="assets/img/1.png">
 
-    <title>Portifolio</title>
+    <title>Portfólio</title>
 </head>
 <body>
 
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="sobre.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Portifolio</a>
+                <a class="nav-link" href="index.html">Portfólio</a>
               </li>
               <li class="nav-item">
                 <button  id="acaoum" type="button" class="btn btn-outline-success"><a href="contato.html">Contato</a></button>
@@ -196,7 +196,7 @@
     <div class="nome">
         <a href="sobre.html">Sobre Min</a>
         <a href="portifolio.html">Portfólio</a>
-        <a href="contato.html">contato</a>
+        <a href="contato.html">Contato</a>
     </div> 
 
     <div class="rodapes">
