--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="sobre.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portifolio.html">Portifolio</a>
+                <a class="nav-link" href="portifolio.html">Portfólio</a>
               </li>
               <li class="nav-item">
                 <button  id="acaoum" type="button" class="btn btn-outline-success"><a href="contato.html">Contato</a></button>
@@ -216,7 +216,7 @@
     <div class="nome">
         <a href="sobre.html">Sobre Min</a>
         <a href="portifolio.html">Portfólio</a>
-        <a href="contato.html">contato</a>
+        <a href="contato.html">Contato</a>
     </div> 
 
     <div class="rodapes">
@@ -227,6 +227,9 @@
      </div>
      
   </div>
+  
+  
+  
   <div id="copy">    <p>&copy; Todos os direitos reservados por Marcos</p>
   </div>
 
