--- a/sobre.html
+++ b/sobre.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="sobre.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portifolio.html">Portifolio</a>
+                <a class="nav-link" href="portifolio.html">Portfólio</a>
               </li>
               <li class="nav-item">
                 <button  id="acaoum" type="button" class="btn btn-outline-success"><a href="contato.html">Contato</a></button>
@@ -136,7 +136,7 @@
     <div class="nome">
         <a href="sobre.html">Sobre Min</a>
         <a href="portifolio.html">Portfólio</a>
-        <a href="contato.html">contato</a>
+        <a href="contato.html">Contato</a>
     </div> 
 
     <div class="rodapes">
