--- a/portifolio.html
+++ b/portifolio.html
@@ -31,13 +31,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="menu.html">Menu</a>
+                <a class="nav-link" href="index.html">Menu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sobre.html">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Portfólio</a>
+                <a class="nav-link" href="portifolio.html">Portfólio</a>
               </li>
               <li class="nav-item">
                 <button  id="acaoum" type="button" class="btn btn-outline-success"><a href="contato.html">Contato</a></button>
