--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,7 @@
           </aside>
 
             <div class="container">     
-              <form  class="formulario"  name="contact" netlify>
+              <form  action="sucess" class="formulario"  name="contact" netlify>
                     <div class="Formulário-dados">
                       <label>Nome<input type="text" name="name"></label>   </div>
           
